--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,7 +16,7 @@ path = "src/main.rs"
 # The `_lib` suffix may seem redundant but it is necessary
 # to make the lib name unique and wouldn't conflict with the bin name.
 # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
-name = "bateriapan_lib"
+name = "bateria_al_cien_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
