--- a/bmad-output/implementation-artifacts/sprint-status.yaml
+++ b/bmad-output/implementation-artifacts/sprint-status.yaml
@@ -60,7 +60,7 @@ development_status:
   3-4-connect-ui-to-backend: done
   epic-3-retrospective: optional
 
-  epic-4: backlog
-  4-1-github-actions-updater-config: backlog
+  epic-4: active
+  4-1-github-actions-updater-config: done
   4-2-update-check-notification: backlog
   epic-4-retrospective: optional
